--- a/stroboskop.html
+++ b/stroboskop.html
@@ -4,6 +4,8 @@
     <title>..:: Stroboskop ::..</title>
     <meta charset="UTF-8">
     
+    <link rel="stylesheet" href="stili.css" type="text/css" />
+    
     <script src="skripta.js"></script>
 </head>
 <body>
