--- a/stroboskop.html
+++ b/stroboskop.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="stili.css" type="text/css" />
     
     <script src="skripta.js"></script>
+    <script src="jscolor.js"></script>
 </head>
 <body>
 
